# DeepResearch

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/commands/: build-next.md  eval.md  gate.md  spec-check.md
.claude/skills/build-module/: SKILL.md
.claude/skills/verify-citations/: SKILL.md
docs/guide/: 00-operating-model.md  01-build-order.md  02-coding-conventions.md  03-quality-gates.md  04-running.md
docs/spec/: 00-vision-prd.md  01-glossary.md  02-architecture.md  03-cross-cutting.md
docs/spec/modules/: _TEMPLATE.md  eval.md  journal.md  kernel.md  mcp-tools.md  pipeline.md  provider-pool.md  subagent.md  verifier.md
docs/superpowers/plans/: 2026-06-13-deepresearch-dev-framework.md  2026-06-13-eval.md  2026-06-13-journal.md  2026-06-13-kernel.md  2026-06-13-mcp-tools.md  2026-06-13-pipeline.md  2026-06-13-provider-pool.md  2026-06-13-subagent.md  2026-06-13-verifier.md
docs/superpowers/specs/: 2026-06-13-deepresearch-dev-framework-design.md
src/deep_research/: cli.py  runtime.py
src/deep_research/cross_cutting/: budget.py  config.py  errors.py  logging.py
src/deep_research/eval/: __init__.py  models.py  (+1 more)
tests/cross_cutting/: test_budget.py  test_config.py  test_errors.py  test_logging.py
tests/eval/: test_eval.py
tests/journal/: test_journal.py
tests/kernel/: test_kernel.py
tests/mcp_tools/: test_tools.py
tests/pipeline/: test_pipeline.py
tests/provider_pool/: test_pool.py
tests/runtime/: test_cli.py  test_runtime.py
tests/subagent/: test_subagent.py
tests/system/: test_quality_gates.py
tests/verifier/: test_verifier.py
(+23 files in other folders)
