[project]
name = "deep-research"
version = "0.0.0"
description = "多智能体深度研究系统（由本框架引导实现）"
requires-python = ">=3.14"
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.0",
  "mcp>=1.0",
]

[project.scripts]
deep-research = "deep_research.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5", "pyright>=1.1"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.14"
reportMissingTypeStubs = false
include = ["src", "tests"]
extraPaths = ["src"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
